[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openvoice-cli"
version = "0.0.1"
authors = [
  { name="daswer123", email="daswerq123@gmail.com" },
]
description = "Use OpenVoice 2 stage via console or python scripts"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "librosa==0.9.1",
  "faster-whisper==0.9.0",
  "pydub==0.25.1",
  "wavmark==0.0.2",
  "eng_to_ipa==0.0.2",
  "inflect==7.0.0",
  "unidecode==1.3.7",
  "whisper-timestamped==1.14.2",
  "python-dotenv",
  "pypinyin==0.50.0",
  "cn2an==0.5.22",
  "jieba==0.42.1",
  "langid==1.1.6",
  "torch==1.13.1",
  "torchaudio==0.13.1",
  "typing-extensions==4.6.1",
  "numpy==1.26.2"
]

[project.urls]
Homepage = "https://github.com/daswer123/OpenVoice-cli"
"Bug Tracker" = "https://github.com/daswer123/OpenVoice-cli/issues"

[tool.hatch.build.targets.wheel]
only-include=["openvoice_cli"]